fixed todo item overflow problem

--- a/src/components/Todo/index.module.css
+++ b/src/components/Todo/index.module.css
@@ -1,5 +1,5 @@
 .todo {
-  @apply w-full flex justify-start items-center text-gray-400 border-l-4 border-b-2 border-b-gray-600 bg-dark p-4 overflow-x-auto;
+  @apply w-full flex justify-start items-center text-gray-400 border-l-4 border-b-2 border-b-gray-600 bg-dark p-4;
 }
 
 .todo::-webkit-scrollbar {
@@ -15,7 +15,7 @@
 }
 
 .todoItem {
-  @apply w-full;
+  @apply w-full break-words overflow-hidden;
 }
 
 .done {
